@@ -1,3 +1,9 @@
+2009-06-23  Jim Meyering  <meyering@redhat.com>
+
+	* src/ftfont.c (setup_otf_gstring, ftfont_shape_by_flt): Use
+	xmalloc and xrealloc (not malloc and realloc), so subsequent heap
+	pointer dereferences are guaranteed to be valid.
+
 2009-06-21  Jason Rumney  <jasonr@gnu.org>
 
 	* w32term.c (keyboard_codepage): New static variable.
